[package]
name = "hyperloglog"
version = "0.1.0"
edition = "2021"


[[bench]]
name = "simple"
harness = false

[[bench]]
name = "multithreaded"
harness = false

[[bench]]
name = "merge"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
seahash = "4.1.0"
tabled = "0.12.2"
