[package]
name = "hll-atomic"
description = "thread-safe hyperloglog, with atomics"
keywords = ["atomic", "non-blocking", "lock-free", "hyperloglog"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/benaubin/hyperloglog"
homepage = "https://github.com/benaubin/hyperloglog"
categories = ["concurrency", "data-structures"]

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "multithreaded"
harness = false

[[bench]]
name = "merge"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
seahash = "4.1.0"
tabled = "0.12.2"
